# videoGirl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COOLIFY.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: build.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
admin/: app.py  auth.py  main.py
admin/templates/: base.html  dashboard.html  form.html  list.html  login.html
bot/: __main__.py  dispatcher.py  keyboards.py  states.py
bot/handlers/: chat.py  commands.py  onboarding.py  payments.py
bot/middlewares/: db_session.py  rate_limit.py
coolify/: docker-compose.prod.yml
infra/: MINI_APP_STARS.md  README.md
infra/comfyui/: CATALOG.md  README.md  (+2 more)
migrations/: env.py
miniapp/: __init__.py  app.py  security.py
orchestrator/: core.py  persona.py
repositories/: admin_repo.py
scripts/: kimi-code.sh  start.sh  trello-log.sh
shared/: comfyui_gateway.py  compliance.py  config.py  db.py  embeddings.py  gacha.py  gifts.py  health.py  image_gen.py  intimacy.py  llm.py  logging.py  media_store.py  memory.py  messaging.py  models.py  mood.py  payments.py  proactive.py  quota.py  redis.py  referral.py  reminders.py  safety.py  scene_templates.py  special_dates.py  subscriptions.py  tts.py  video_gen.py  voice.py  wallet.py
tests/: conftest.py  test_admin.py  test_bot.py  test_chat.py  test_compliance.py  test_config.py  test_gacha.py  test_gifts.py  test_gpu_worker.py  test_health.py  test_image_gen.py  test_intimacy.py  test_llm.py  test_media_queue.py  test_memory.py  test_miniapp.py  test_miniapp_api.py  test_mood.py  test_orchestrator.py  test_payments.py  test_persona.py  test_persona_switch.py  test_proactive.py  test_quota.py  test_referral.py  test_reminders.py  test_safety.py  test_scene_templates.py  test_special_dates.py  test_subscriptions.py  test_tts.py  test_video_gen.py  test_voice.py  test_wallet.py
workers/: comfyui_runner.py  gpu_worker.py  media_tasks.py  queue_client.py  worker.py
(+43 files in other folders)
