[project]
name = "videogirl"
version = "0.1.0"
description = "Telegram NSFW Traditional-Chinese AI girlfriend service"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiogram>=3.0,<4.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "jinja2>=3.1",
    "edge-tts>=6.1",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "orchestrator", "workers", "shared", "admin", "repositories"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
